[gd_scene load_steps=37 format=2]

[ext_resource path="res://src/actors/player/Player.gd" type="Script" id=1]
[ext_resource path="res://asset/frames/elf_m_run_anim_f2.png" type="Texture" id=2]
[ext_resource path="res://asset/frames/elf_m_run_anim_f1.png" type="Texture" id=3]
[ext_resource path="res://asset/frames/elf_m_run_anim_f0.png" type="Texture" id=4]
[ext_resource path="res://asset/frames/elf_m_idle_anim_f3.png" type="Texture" id=5]
[ext_resource path="res://asset/frames/elf_m_run_anim_f3.png" type="Texture" id=6]
[ext_resource path="res://asset/frames/elf_m_idle_anim_f1.png" type="Texture" id=7]
[ext_resource path="res://asset/frames/elf_m_idle_anim_f2.png" type="Texture" id=8]
[ext_resource path="res://asset/frames/elf_m_idle_anim_f0.png" type="Texture" id=9]
[ext_resource path="res://asset/frames/wall_inner_corner_l_top_rigth.png" type="Texture" id=10]
[ext_resource path="res://asset/frames/knight_m_idle_anim_f3.png" type="Texture" id=11]
[ext_resource path="res://asset/frames/elf_m_hit_anim_f0.png" type="Texture" id=12]
[ext_resource path="res://asset/frames/coin_anim_f3.png" type="Texture" id=13]
[ext_resource path="res://src/shaders/flash_white.shader" type="Shader" id=14]
[ext_resource path="res://src/particles/Death Particles.tscn" type="PackedScene" id=15]
[ext_resource path="res://asset/frames/knight_m_hit_anim_f0.png" type="Texture" id=16]
[ext_resource path="res://asset/frames/knight_m_run_anim_f2.png" type="Texture" id=17]
[ext_resource path="res://asset/frames/knight_m_run_anim_f0.png" type="Texture" id=18]
[ext_resource path="res://asset/frames/knight_m_run_anim_f3.png" type="Texture" id=19]
[ext_resource path="res://asset/frames/knight_m_idle_anim_f2.png" type="Texture" id=20]
[ext_resource path="res://asset/frames/knight_m_run_anim_f1.png" type="Texture" id=21]
[ext_resource path="res://asset/frames/knight_m_idle_anim_f0.png" type="Texture" id=22]
[ext_resource path="res://asset/frames/knight_m_idle_anim_f1.png" type="Texture" id=23]
[ext_resource path="res://asset/shock wave.png" type="Texture" id=24]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 14 )
shader_param/active = false

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 6 ) ],
"loop": true,
"name": "Move",
"speed": 10.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 5 ) ],
"loop": true,
"name": "Idle",
"speed": 10.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "Hurt",
"speed": 5.0
} ]

[sub_resource type="ShaderMaterial" id=3]
resource_local_to_scene = true
shader = ExtResource( 14 )
shader_param/active = false

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 18 ), ExtResource( 21 ), ExtResource( 17 ), ExtResource( 19 ) ],
"loop": true,
"name": "Move",
"speed": 10.0
}, {
"frames": [ ExtResource( 22 ), ExtResource( 23 ), ExtResource( 20 ), ExtResource( 11 ) ],
"loop": true,
"name": "Idle",
"speed": 10.0
}, {
"frames": [ ExtResource( 16 ) ],
"loop": true,
"name": "Hurt",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=5]
radius = 3.136
height = 6.09812

[sub_resource type="CapsuleShape2D" id=6]
radius = 5.0331
height = 3.07029

[sub_resource type="CircleShape2D" id=11]
radius = 19.2605

[sub_resource type="Animation" id=7]
length = 0.1
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Armor:material:shader_param/active")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=8]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Armor:material:shader_param/active")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=9]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Hurt" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 0.4, 4.3 ),
"update": 0,
"values": [ Vector2( 0, -4 ), Vector2( 0, -16 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Armor:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Hurt" ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Armor:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 0.4, 4.3 ),
"update": 0,
"values": [ Vector2( 0, -4 ), Vector2( 0, -16 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=10]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Idle" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Armor:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Idle" ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Armor:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -4 ) ]
}

[sub_resource type="Gradient" id=12]
offsets = PoolRealArray( 0, 0.306273 )
colors = PoolColorArray( 0.855469, 0.855469, 0.855469, 1, 0.580392, 0.580392, 0.580392, 0 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 1 )
MAX_LIFE = 10
CURRENT_LIFE = 10

[node name="Shadow" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 0.27451 )
position = Vector2( 0, 10 )
rotation = 1.5708
scale = Vector2( 1, 1.5 )
texture = ExtResource( 13 )

[node name="Sprite" type="AnimatedSprite" parent="."]
material = SubResource( 1 )
position = Vector2( 0, -4 )
frames = SubResource( 2 )
animation = "Move"
frame = 2
playing = true

[node name="Armor" type="AnimatedSprite" parent="."]
visible = false
material = SubResource( 3 )
position = Vector2( 0, -4 )
frames = SubResource( 4 )
animation = "Hurt"
playing = true

[node name="Boundry" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -0.486858, 7.15848 )
rotation = 1.5708
shape = SubResource( 5 )

[node name="Hurtbox" type="Area2D" parent="."]
visible = false
position = Vector2( 0, -0.19371 )
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( -0.166084, 3.65384 )
shape = SubResource( 6 )

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2( -0.523155, -0.0166092 )
shape = SubResource( 11 )

[node name="TargetOrigin" type="Position2D" parent="."]

[node name="TextureRect" type="TextureRect" parent="TargetOrigin"]
margin_left = -16.0
margin_bottom = 16.0
rect_rotation = 135.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CameraOrigin" type="Position2D" parent="."]

[node name="Camera" type="Camera2D" parent="CameraOrigin"]
current = true
limit_left = -32
limit_top = -32
limit_right = 1056
limit_bottom = 656
smoothing_enabled = true

[node name="IframesPlayer" type="AnimationPlayer" parent="."]
"anims/Iframes Start" = SubResource( 7 )
"anims/Iframes Stop" = SubResource( 8 )

[node name="ActionPlayer" type="AnimationPlayer" parent="."]
anims/Hurt = SubResource( 9 )
anims/Stand = SubResource( 10 )

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="IframesTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="DeathParticles" parent="." instance=ExtResource( 15 )]

[node name="DashPivot" type="Position2D" parent="."]

[node name="DashParticles" type="CPUParticles2D" parent="DashPivot"]
position = Vector2( 16, 0 )
amount = 128
lifetime = 0.75
speed_scale = 1.5
emission_shape = 1
emission_sphere_radius = 8.0
spread = 0.0
gravity = Vector2( 0, 0 )
initial_velocity = 200.0
angular_velocity = 300.0
angular_velocity_random = 1.0
scale_amount = 2.0
scale_amount_random = 1.0
color_ramp = SubResource( 12 )

[node name="ShockWave" type="Sprite" parent="DashPivot"]
modulate = Color( 1, 1, 1, 0.498039 )
position = Vector2( -8, 0 )
scale = Vector2( 1.25, 1.5 )
texture = ExtResource( 24 )
flip_h = true
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="animation_finished" from="ActionPlayer" to="." method="_on_ActionPlayer_animation_finished"]
[connection signal="timeout" from="IframesTimer" to="." method="_on_IframesTimer_timeout"]
